--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
   
-<a id="added" href="#!">დამატებულია</a>
+<a id="added" href="#!">დამატებულია ახალი ღილაკი</a>
 <p></p>
 		
-<a id="more" href="#!">ვრცლად</a>
+<a id="more" href="#!">ვრცლად ახალი ვერსია</a>
 <p></p>
 
 <a id="addnew" href="#!">დამატება</a>
