--- a/index.html
+++ b/index.html
@@ -2,21 +2,93 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>დავალება 1</title>
+	<title>Tsaikhemse</title>
 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-
 </head>
 <body>
+<header>
+	<img src="">
+	<nav class="mainNav">
+		<ul class="nav-ul">
+			<li class="nav-li">
+				<a href="#!">პროდუქცია</a>
+			</li>
+			<li class="nav-li">
+				<a href="#!" >კონტაქტი</a>
+			</li>
+		</ul>
+	</nav>
+</header>
 
-  
-<a id="added" href="#!">დამატებულია ახალი ღილაკი</a>
-<p></p>
-		
-<a id="more" href="#!">ვრცლად ახალი ვერსია</a>
-<p></p>
+<div class="MainPage">
+	<section class="section1">
+		<h1>იტალიური სამზარეულო</h1>
+		<p>გოლდი სვეტებს ყვავილისგან სარკმლით გამოტოვებული ევროკავშირის. WHAT? :D</p>
+		<a href="#!">ვრცლად</a>
+		<img src="">
+	</section>
+	<a href=""></a>
+</div>
+<section class="ProductList">
+	<h2>იტალიური პასტა</h2>
+	<ul class="Product_ul">
+		<li class="Product_li">
+			<img src="/Image/1.jpg">
+			<h3>სპაგეტი ალა მატრიჩიანა</h3>
+			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
+			<a class="Add" href="">დამატება</a>
+		</li>
+		<li class="Product_li">
+			<img src="/Image/2.jpg">
+			<h3>სპაგეტი ალა მატრიჩიანა</h3>
+			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
+			<a class="Add" href="">დამატება</a>
+		<li class="Product_li">
+			<img src="/Image/3.jpg">
+			<h3>სპაგეტი ალა მატრიჩიანა</h3>
+			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
+			<a class="Add" href="">დამატება</a>
+		<li class="Product_li">
+			<img src="/Image/4.jpg">
+			<h3>სპაგეტი ალა მატრიჩიანა</h3>
+			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
+			<a class="Add" href="">დამატება</a>
+		<li class="Product_li">
+			<img src="/Image/5.jpg">
+			<h3>სპაგეტი ალა მატრიჩიანა</h3>
+			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
+			<a class="Add" href="">დამატება</a>
+		<li class="Product_li">
+			<img src="/Image/6.jpg">
+			<h3>სპაგეტი ალა მატრიჩიანა</h3>
+			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
+			<a class="Add" href="">დამატება</a>
+		</li>
+	</ul>
+</section>
 
-<a id="addnew" href="#!">დამატება</a>
-<p></p>
+<section class="Address">
+	<div class="AddressTelNumber">
+		<address> მიცკევიჩის #7 ა, პირველი სადარბაზო 	(+995) 595 494 303</address>
+	</div>
+	<div class="GoogleMap"></div>
+</section>
 
-   </body>
+<footer>
+	<div class="footer">
+	<img src="">
+	<ul>
+		<li>
+			<a class="facebook" href=""></a>
+		</li>
+		<li>
+			<a class="Instagram" href=""></a>
+		</li>
+		<li>
+			<a class="Youtube" href=""></a>
+		</li>
+	</ul>
+	</div>
+</footer>
+</body>
 </html>
