--- a/index.html
+++ b/index.html
@@ -33,33 +33,33 @@
 	<h2>იტალიური პასტა</h2>
 	<ul class="Product_ul">
 		<li class="Product_li">
-			<img src="/Image/1.jpg">
+			<img src="/tsaikhemse/Image/1.jpg">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		</li>
 		<li class="Product_li">
-			<img src="/Image/2.jpg">
+			<img src="/tsaikhemse/Image/2.jpg">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/Image/3.jpg">
+			<img src="/tsaikhemse/Image/3.jpg">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/Image/4.jpg">
+			<img src="/tsaikhemse/Image/4.jpg">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/Image/5.jpg">
+			<img src="/tsaikhemse/Image/5.jpg">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/Image/6.jpg">
+			<img src="/tsaikhemse/Image/6.jpg">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
