--- a/index.html
+++ b/index.html
@@ -3,63 +3,72 @@
 <head>
 	<meta charset="utf-8">
 	<title>Tsaikhemse</title>
-	<link rel="stylesheet" type="text/css" href="/tsaikhemse/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 <body>
-<header>
-	<img src="">
-	<nav class="mainNav">
-		<ul class="nav-ul">
-			<li class="nav-li">
-				<a href="#!">პროდუქცია</a>
-			</li>
-			<li class="nav-li">
-				<a href="#!" >კონტაქტი</a>
-			</li>
-		</ul>
-	</nav>
-</header>
+	<header>
+		<img src="/assets/images/logo.svg">
+		<nav class="mainNav">
+			<ul class="header_navigation">
+				<li class="nav-li">
+					<a href="#!">პროდუქცია</a>
+				</li>
+				<li class="nav-li">
+					<a href="#!" >კონტაქტი</a>
+				</li>
+			</ul>
+		</nav>
 
-<div class="MainPage">
-	<section class="section1">
+<div class="burger">
+
+	<span class="burger_item"></span>
+	<span class="burger_item"></span>
+	<span class="burger_item"></span>
+
+</div>
+
+	</header>
+
+<div class="hero">
+	<section class="hero_content">
 		<h1>იტალიური სამზარეულო</h1>
 		<p>გოლდი სვეტებს ყვავილისგან სარკმლით გამოტოვებული ევროკავშირის. WHAT? :D</p>
 		<a href="#!">ვრცლად</a>
-		<img src="">
+		<img class="hero_image" src="/assets/images/main_pic.png">
 	</section>
-	<a href=""></a>
+	<a href="">დაუყევი სატის</a>
 </div>
 <section class="ProductList">
 	<h2>იტალიური პასტა</h2>
 	<ul class="Product_ul">
 		<li class="Product_li">
-			<img src="/tsaikhemse/Image/1.jpg">
+			<img src="/assets/images/1.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		</li>
 		<li class="Product_li">
-			<img src="/tsaikhemse/Image/2.jpg">
+			<img src="/assets/images/2.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/tsaikhemse/Image/3.jpg">
+			<img src="/assets/images/3.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/tsaikhemse/Image/4.jpg">
+			<img src="/assets/images/4.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/tsaikhemse/Image/5.jpg">
+			<img src="/assets/images/5.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/tsaikhemse/Image/6.jpg">
+			<img src="/assets/images/6.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
