--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <div class="hero">
 	<section class="hero_content">
 		<h1>იტალიური სამზარეულო</h1>
-		<p>გოლდი სვეტებს ყვავილისგან სარკმლით გამოტოვებული ევროკავშირის. WHAT? :D</p>
-		<a href="#!">ვრცლად</a>
-		<img class="hero_image" src="/assets/images/main_pic.png">
+		<p class="hero_p">იტალური სამზარეულო საქართველოში</p>
+		<a class="hero_a" href="#!">ვრცლად</a>
+		<!-- <img class="hero_image" src="/assets/images/main_pic.png"> -->
 	</section>
-	<a href="">დაუყევი სატის</a>
+	<a class="hero_scroll" href="">დაუყევი სატის</a>
 </div>
 <section class="ProductList">
 	<h2>იტალიური პასტა</h2>
