--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Tsaikhemse</title>
-	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/tsaikhemse/assets/css/style.css">
 </head>
 <body>
 	<header>
-		<img src="/assets/images/logo.svg">
+		<img src="/tsaikhemse/assets/images/logo.svg">
 		<nav class="mainNav">
 			<ul class="header_navigation">
 				<li class="nav-li">
@@ -34,7 +34,7 @@
 		<h1>იტალიური სამზარეულო</h1>
 		<p class="hero_p">იტალური სამზარეულო საქართველოში</p>
 		<a class="hero_a" href="#!">ვრცლად</a>
-		<!-- <img class="hero_image" src="/assets/images/main_pic.png"> -->
+		<!-- <img class="hero_image" src="/tsaikhemse/assets/images/main_pic.png"> -->
 	</section>
 	<a class="hero_scroll" href="">დაუყევი სატის</a>
 </div>
@@ -42,33 +42,33 @@
 	<h2>იტალიური პასტა</h2>
 	<ul class="Product_ul">
 		<li class="Product_li">
-			<img src="/assets/images/1.png">
+			<img src="/tsaikhemse/assets/images/1.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		</li>
 		<li class="Product_li">
-			<img src="/assets/images/2.png">
+			<img src="/tsaikhemse/assets/images/2.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/assets/images/3.png">
+			<img src="/tsaikhemse/assets/images/3.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/assets/images/4.png">
+			<img src="/tsaikhemse/assets/images/4.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/assets/images/5.png">
+			<img src="/tsaikhemse/assets/images/5.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
 		<li class="Product_li">
-			<img src="/assets/images/6.png">
+			<img src="/tsaikhemse/assets/images/6.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<a class="Add" href="">დამატება</a>
