instert main image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<h1>იტალიური სამზარეულო</h1>
 		<p class="hero_p">იტალური სამზარეულო საქართველოში</p>
 		<a class="hero_a" href="#!">ვრცლად</a>
-		<!-- <img class="hero_image" src="assets/images/main_pic.png"> -->
+		<img class="hero_image" src="assets/images/main_pic.png">
 	</section>
 	<a class="hero_scroll" href="">დაუყევი სატის</a>
 </div>
