--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Tsaikhemse</title>
+	<meta name="viewport" content="width = device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -34,11 +35,11 @@
 		<h1>იტალიური სამზარეულო</h1>
 		<p class="hero_p">იტალური სამზარეულო საქართველოში</p>
 		<a class="hero_a" href="#!">ვრცლად</a>
-		<img class="hero_image" src="assets/images/main_pic.png">
+		<img class="hero_image" src="assets/images/main_pic.png" >
 	</section>
-	<a class="hero_scroll" href="">დაუყევი სატის</a>
+	<a class="hero_scroll" href="#ProductList">დაუყევი სატის</a>
 </div>
-<section class="ProductList">
+<section class="ProductList" id ="ProductList">
 	<h2>იტალიური პასტა</h2>
 	<ul class="Product_ul">
 		<li class="Product_li">
