Product List Styles

--- a/index.html
+++ b/index.html
@@ -34,45 +34,45 @@
 	<section class="hero_content">
 		<h1>იტალიური სამზარეულო</h1>
 		<p class="hero_p">იტალური სამზარეულო საქართველოში</p>
-		<a class="hero_a" href="#!">ვრცლად</a>
+		<button class="hero_more" href="#!">ვრცლად</button>
 		<img class="hero_image" src="assets/images/main_pic.png" >
 	</section>
 	<a class="hero_scroll" href="#ProductList">დაუყევი სატის</a>
 </div>
 <section class="ProductList" id ="ProductList">
-	<h2>იტალიური პასტა</h2>
+	<h2 class="ProductList_title">იტალიური პასტა</h2>
 	<ul class="Product_ul">
 		<li class="Product_li">
 			<img src="assets/images/1.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
-			<a class="Add" href="">დამატება</a>
+			<button class="Add" href="">დამატება</button>
 		</li>
 		<li class="Product_li">
-			<img src="assets/images/2.png">
+			<img class="ProductImage" src="assets/images/2.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
-			<a class="Add" href="">დამატება</a>
+			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img src="assets/images/3.png">
+			<img class="ProductImage" src="assets/images/3.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
-			<a class="Add" href="">დამატება</a>
+			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img src="assets/images/4.png">
+			<img class="ProductImage" src="assets/images/4.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
-			<a class="Add" href="">დამატება</a>
+			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img src="assets/images/5.png">
+			<img class="ProductImage" src="assets/images/5.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
-			<a class="Add" href="">დამატება</a>
+			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img src="assets/images/6.png">
+			<img class="ProductImage" src="assets/images/6.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
-			<a class="Add" href="">დამატება</a>
+			<button class="Add" href="">დამატება</button>
 		</li>
 	</ul>
 </section>
