--- a/index.html
+++ b/index.html
@@ -77,28 +77,43 @@
 	</ul>
 </section>
 
-<section class="Address">
+
+<footer>
+
 	<div class="AddressTelNumber">
 		<address> მიცკევიჩის #7 ა, პირველი სადარბაზო 	(+995) 595 494 303</address>
 	</div>
-	<div class="GoogleMap"></div>
-</section>
 
-<footer>
-	<div class="footer">
-	<img src="">
-	<ul>
-		<li>
-			<a class="facebook" href=""></a>
-		</li>
-		<li>
-			<a class="Instagram" href=""></a>
-		</li>
-		<li>
-			<a class="Youtube" href=""></a>
-		</li>
-	</ul>
+	<div class="GoogleMap">
+        	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.6591572740526!2d44.78139741531853!3d41.70629318412745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd04f0da3f7%3A0x28b3664ea2476d6f!2sVere+Loft!5e0!3m2!1sen!2sge!4v1556131514935!5m2!1sen!2sge" width="1086" height="290" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+	
+	<div class="icons">
+
+		<a href="https://smartacademy.ge" target="_blank" class="smartacademy">
+			<img src="/assets/images/academy-logo.svg">
+		</a>
+
+		<ul>
+			<li>
+				<a class="facebook" href="">
+					<img src="/assets/images/facebook.svg">
+				</a>
+			</li>
+			<li>
+				<a class="Instagram" href="">
+					<img src="/assets/images/instagram.svg">
+				</a>
+			</li>
+			<li>
+				<a class="Youtube" href="">
+					<img src="/assets/images/youtube.svg">
+				</a>
+			</li>
+		</ul>
+
 	</div>
+
 </footer>
 </body>
 </html>
