--- a/index.html
+++ b/index.html
@@ -95,22 +95,30 @@
 		</a>
 
 		<ul>
+		<!-- <span> -->
 			<li>
 				<a class="facebook" href="">
-					<img src="/assets/images/facebook.svg">
+					<img class="sotialimg" src="/assets/images/facebook.svg">
 				</a>
 			</li>
+
+
 			<li>
 				<a class="Instagram" href="">
-					<img src="/assets/images/instagram.svg">
+					<img class="sotialimg" src="/assets/images/instagram.svg">
 				</a>
 			</li>
 			<li>
 				<a class="Youtube" href="">
-					<img src="/assets/images/youtube.svg">
+					<img class="sotialimg" src="/assets/images/youtube.svg">
 				</a>
 			</li>
+			<!-- </span> -->
 		</ul>
+
+		<a href=""  class="smartacademy">
+			<img src="/assets/images/card.svg">
+		</a>
 
 	</div>
 
