--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="hero">
 	<section class="hero_content">
 		<h1>იტალიური სამზარეულო</h1>
-		<p class="hero_p">იტალური სამზარეულო საქართველოში</p>
+		<p class="hero_p">აღმოაჩინე იტალია შენს უბანში</p>
 		<button class="hero_more" href="#!">ვრცლად</button>
 		<img class="hero_image" src="assets/images/main_pic.png" >
 	</section>
@@ -91,33 +91,33 @@
 	<div class="icons">
 
 		<a href="https://smartacademy.ge" target="_blank" class="smartacademy">
-			<img src="/assets/images/academy-logo.svg">
+			<img src="assets/images/academy-logo.svg">
 		</a>
 
 		<ul>
 		<!-- <span> -->
 			<li>
-				<a class="facebook" href="">
-					<img class="sotialimg" src="/assets/images/facebook.svg">
+				<a class="Icon_name" href="https://facebook.com" target="_blank" >
+					<img class="sotialimg" src="assets/images/facebook.svg">
 				</a>
 			</li>
 
 
 			<li>
-				<a class="Instagram" href="">
-					<img class="sotialimg" src="/assets/images/instagram.svg">
+				<a class="Icon_name" href="https://instagram.com" target="_blank" >
+					<img class="sotialimg" src="assets/images/instagram.svg">
 				</a>
 			</li>
 			<li>
-				<a class="Youtube" href="">
-					<img class="sotialimg" src="/assets/images/youtube.svg">
+				<a class="Icon_name" href="https://youtube.com" target="_blank" >
+					<img class="sotialimg" src="assets/images/youtube.svg">
 				</a>
 			</li>
 			<!-- </span> -->
 		</ul>
 
 		<a href=""  class="smartacademy">
-			<img src="/assets/images/card.svg">
+			<img src="assets/images/card.svg">
 		</a>
 
 	</div>
