--- a/index.html
+++ b/index.html
@@ -43,33 +43,33 @@
 	<h2 class="ProductList_title">იტალიური პასტა</h2>
 	<ul class="Product_ul">
 		<li class="Product_li">
-			<img src="assets/images/1.png"  data-src="/assets/images/1.png"  data-src="/assets/images/1.png">
+			<img src="assets/images/1.png"  data-src="/assets/images/1.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<button class="Add" href="">დამატება</button>
 		</li>
 		<li class="Product_li">
-			<img class="ProductImage" src="assets/images/1.png"  data-src="/assets/images/2.png">
+			<img class="ProductImage" src="assets/images/1.png"  data-src="assets/images/2.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img class="ProductImage" src="assets/images/1.png"  data-src="/assets/images/3.png">
+			<img class="ProductImage" src="assets/images/1.png"  data-src="assets/images/3.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img class="ProductImage" src="assets/images/1.png"  data-src="/assets/images/4.png">
+			<img class="ProductImage" src="assets/images/1.png"  data-src="assets/images/4.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img class="ProductImage" src="assets/images/1.png"  data-src="/assets/images/5.png">
+			<img class="ProductImage" src="assets/images/1.png"  data-src="assets/images/5.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<button class="Add" href="">დამატება</button>
 		<li class="Product_li">
-			<img class="ProductImage" src="assets/images/1.png"  data-src="/assets/images/6.png">
+			<img class="ProductImage" src="assets/images/1.png"  data-src="assets/images/6.png">
 			<h3>სპაგეტი ალა მატრიჩიანა</h3>
 			<p>ტომატი, ხახვი, პარმეზანი ბაზელიკი</p>
 			<button class="Add" href="">დამატება</button>
